syntax = "proto3";

enum GridEvent {
    GetGridData = 0;
    GetRows = 1;
    GetFields = 2;
    CreateRow = 3;
}
